--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,17 @@ certifi==2020.6.20
 chardet==3.0.4
 discord==1.0.1
 discord.py==1.3.3
+dnspython==1.16.0
+get==0.0.0
 idna==2.10
 imgurpython==1.1.7
 multidict==4.7.6
 mysql-connector==2.2.9
+post==0.0.0
 praw==7.1.0
 prawcore==1.4.0
+query-string==0.0.0
+request==0.0.0
 requests==2.24.0
 six==1.15.0
 update-checker==0.17
