Moving all event listener into one file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
-aiohttp==3.6.2
-async-timeout==3.0.1
-attrs==19.3.0
-certifi==2020.6.20
-chardet==3.0.4
-discord==1.0.1
-discord.py==1.3.3
-dnspython==1.16.0
-get==0.0.0
-idna==2.10
-imgurpython==1.1.7
-multidict==4.7.6
-mysql-connector==2.2.9
-post==0.0.0
-praw==7.1.0
-prawcore==1.4.0
-query-string==0.0.0
-request==0.0.0
-requests==2.24.0
-six==1.15.0
-update-checker==0.17
-urllib3==1.25.9
-websocket-client==0.57.0
-websockets==8.1
-yarl==1.4.2
+aiohttp
+async-timeout
+attrs
+certifi
+chardet
+discord
+discord.py
+dnspython
+get
+idna
+imgurpython
+multidict
+mysql-connector
+post
+praw
+prawcore
+query-string
+request
+requests
+six
+update-checker
+urllib3
+websocket-client
+websockets
+yarl
