Add Hentai cogs for you man of culture

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,27 @@
-aiohttp
-async-timeout
-attrs
-certifi
-chardet
-discord
-discord.py
-dnspython
-idna
-imgurpython
-multidict
-mysql-connector
-praw
-prawcore
-query-string
-request
-requests
-six
-update-checker
-urllib3
-websocket-client
-websockets
-yarl
+aiohttp==3.6.2
+appdirs==1.4.4
+async-timeout==3.0.1
+attrs==20.2.0
+certifi==2020.6.20
+chardet==3.0.4
+discord==1.0.1
+discord.py==1.5.0
+distlib==0.3.1
+dnspython==2.0.0
+filelock==3.0.12
+hentai==1.2
+idna==2.10
+imgurpython==1.1.7
+multidict==4.7.6
+mysql-connector==2.2.9
+praw==7.1.0
+prawcore==1.5.0
+query-string==0.0.0
+requests==2.24.0
+six==1.15.0
+update-checker==0.18.0
+urllib3==1.25.10
+virtualenv==20.0.31
+webs==0.0.4
+websocket-client==0.57.0
+yarl==1.6.0
