--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ discord = "^1.0.1"
 imgurpython = "^1.1.7"
 praw = "^7.1.0"
 prawcore = "^1.5.0"
+flask = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 
