--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 multidict==4.7.6
 mysql-connector==2.2.9
+MyQR==2.3.1
 praw==7.1.0
 prawcore==1.5.0
 query-string==0.0.0
