Jikanized the anime search cogs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 aiohttp==3.6.2
-git+https://github.com/harizMunawar/animec@18fa21c41d0a1686f1f78003fb21f6f10c9bfcbf#egg=animec
 appdirs==1.4.4
 async-timeout==3.0.1
 attrs==20.2.0
+beautifulsoup4==4.9.3
+bs4==0.0.1
 CacheControl==0.12.6
 certifi==2020.6.20
 chardet==3.0.4
@@ -23,17 +24,22 @@ imageio==2.9.0
 imgurpython==1.1.7
 ipaddr==2.2.0
 itsdangerous==1.1.0
+jikanpy==4.3.2
 Jinja2==2.11.2
 lockfile==0.12.2
 MarkupSafe==1.1.1
 msgpack==0.6.2
 multidict==4.7.6
 MyQR==2.3.1
+numpy==1.20.3
+Pillow==8.2.0
 praw==7.1.0
 prawcore==1.5.0
 requests==2.24.0
 retrying==1.3.3
+simplejson==3.17.2
 six==1.15.0
+soupsieve==2.2.1
 update-checker==0.18.0
 urllib3==1.25.10
 virtualenv==20.0.31
