--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ colorama==0.4.3
 contextlib2==0.6.0
 discord==1.0.1
 discord.py==1.5.0
+discord-message-components==2.0.5
 distlib==0.3.1
 distro==1.4.0
 dnspython==2.0.0
