--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,36 @@
-aiohttp==3.6.2
-appdirs==1.4.4
+aiofiles==0.6.0
+aiohttp==3.7.4.post0
+aiosqlite==0.17.0
+async-generator==1.10
 async-timeout==3.0.1
-attrs==20.2.0
-beautifulsoup4==4.9.3
-bs4==0.0.1
-CacheControl==0.12.6
-certifi==2020.6.20
+asyncio-extras==1.3.2
+asyncpraw==7.4.0
+asyncprawcore==2.3.0
+attrs==21.2.0
+certifi==2021.5.30
+cffi==1.14.6
 chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-contextlib2==0.6.0
-discord==1.0.1
+charset-normalizer==2.0.4
+click==8.0.1
+colorama==0.4.4
+discord==1.7.3
+discord-ui==4.3.8
 discord.py==1.7.3
-distlib==0.3.1
-distro==1.4.0
-dnspython==2.0.0
-filelock==3.0.12
-Flask==1.1.2
-hentai==1.2
-html5lib==1.0.1
+Flask==2.0.1
 idna==2.10
-imageio==2.9.0
-imgurpython==1.1.7
-ipaddr==2.2.0
-itsdangerous==1.1.0
-jikanpy==4.3.2
-Jinja2==2.11.2
-lockfile==0.12.2
-MarkupSafe==1.1.1
-msgpack==0.6.2
-multidict==4.7.6
-MyQR==2.3.1
-numpy==1.19.5
-Pillow==8.2.0
-pip-autoremove==0.9.1
-praw==7.4.0
-prawcore==2.3.0
-requests==2.24.0
-retrying==1.3.3
-simplejson==3.17.2
-six==1.15.0
-soupsieve==2.2.1
-tflearn==0.5.0
+importlib-metadata==4.8.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+multidict==5.1.0
+pycparser==2.20
+PyNaCl==1.4.0
+requests==2.23.0
+saucenao-api==2.4.0
+six==1.16.0
+typing-extensions==3.10.0.2
 update-checker==0.18.0
-urllib3==1.25.10
-virtualenv==20.0.31
-webencodings==0.5.1
-webs==0.0.4
-websocket-client==0.57.0
-Werkzeug==1.0.1
-wikipedia==1.4.0
-yarl==1.6.0
+urllib3==1.25.11
+Werkzeug==2.0.1
+yarl==1.6.3
+zipp==3.5.0
