--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
 aiofiles==0.6.0
-aiohttp==3.7.4.post0
+aiohttp
 aiosqlite==0.17.0
 akinator.py==5.0.0
-appdirs==1.4.4
+appdirs
 async-generator==1.10
-async-timeout==3.0.1
+async-timeout
 asyncio-extras==1.3.2
 asyncpraw==7.4.0
 asyncprawcore==2.3.0
-attrs==21.2.0
-backports.entry-points-selectable==1.1.0
+attrs
+backports.entry-points-selectable
 beautifulsoup4==4.10.0
-certifi==2021.5.30
+certifi
 cffi==1.14.6
 chardet==3.0.4
 charset-normalizer==2.0.4
@@ -23,7 +23,7 @@ discord.py==1.7.3
 distlib==0.3.2
 filelock==3.0.12
 Flask==2.0.1
-hentai==3.2.8
+hentai
 idna==2.10
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
@@ -33,13 +33,11 @@ multidict==5.1.0
 platformdirs==2.3.0
 pycparser==2.20
 PyNaCl==1.4.0
-requests==2.26.0
-saucenao-api==2.4.0
+requests
+saucenao-api
 six==1.16.0
 soupsieve==2.2.1
 tqdm==4.62.2
-typing==3.7.4.3
-typing-extensions==3.10.0.2
 update-checker==0.18.0
 urllib3==1.25.11
 virtualenv==20.7.2
