--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
 aiofiles==0.6.0
-aiohttp
+aiohttp==3.7.4.post0
 aiosqlite==0.17.0
 akinator.py==5.0.0
-appdirs
+appdirs==1.4.4
 async-generator==1.10
-async-timeout
+async-timeout==3.0.1
 asyncio-extras==1.3.2
 asyncpraw==7.4.0
 asyncprawcore==2.3.0
-attrs
-backports.entry-points-selectable
+attrs==21.2.0
+backports.entry-points-selectable==1.1.0
 beautifulsoup4==4.10.0
-certifi
+certifi==2021.5.30
 cffi==1.14.6
 chardet==3.0.4
 charset-normalizer==2.0.4
 click==8.0.1
+cloudscraper==1.2.48
 colorama==0.4.4
 discord==1.7.3
 discord-ui==4.3.8
@@ -30,18 +31,20 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 multidict==5.1.0
+PixivPy==3.6.1
 platformdirs==2.3.0
 pycparser==2.20
 PyNaCl==1.4.0
-requests
-saucenao-api
+pyparsing==3.0.5
+requests-toolbelt==0.9.1
+saucenao-api==2.4.0
 six==1.16.0
 soupsieve==2.2.1
 tqdm==4.62.2
+typing==3.7.4.3
+typing-extensions==3.10.0.2
 update-checker==0.18.0
 urllib3==1.25.11
-virtualenv==20.7.2
 Werkzeug==2.0.1
 yarl==1.6.3
 zipp==3.5.0
-pixivpy
